# dnshijack

./: Cargo.toml  README.md
config/: example.toml
dnshijack/: Cargo.toml  build.rs
dnshijack-common/: Cargo.toml
dnshijack-common/src/: lib.rs
dnshijack/src/: config.rs  dns.rs  main.rs
ebpf/: dnshijack_tc.c
scripts/: README.md  csv_to_toml.py  requirements.txt
