[package]
name = "dnshijack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dnshijack"
path = "src/main.rs"

[build-dependencies]
# (no external build deps — build.rs uses std::process::Command to invoke clang)

[dependencies]
aya            = { version = "0.13.1", features = ["async_tokio"] }
aya-log        = { version = "0.2.0" }
aya-obj        = "0.2.1"
dnshijack-common = { path = "../dnshijack-common", features = ["user"] }

tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
toml           = "0.8"
anyhow         = "1"
log            = "0.4"
env_logger     = "0.11"
clap           = { version = "4", features = ["derive"] }
libc           = "0.2"
